--- a/poyasnizagistu/albums/templates/albums/organ_system.html
+++ b/poyasnizagistu/albums/templates/albums/organ_system.html
@@ -1,13 +1,17 @@
+<!--Шаблон списка альбомов по системам органов-->
+
+<!--Подключение базового шаблона-->
 {% extends 'blog/include/base.html' %}
 
-
+<!--Блок заголовка-->
 {% block title %}
     <title>{{title}}</title>
 {% endblock %}
 
-
+<!--Блок контента-->
 {% block content %}
 
+<!--Подключение базового шаблона альбома-->
 {% include 'albums/include/base_albums.html' %}
 
 {% endblock %}
