--- a/poyasnizagistu/articles/templates/articles/articles.html
+++ b/poyasnizagistu/articles/templates/articles/articles.html
@@ -1,16 +1,17 @@
+<!--Шаблон списка статей-->
+
+<!--Подключение базового шаблона-->
 {% extends 'blog/include/base.html' %}
 
-
+<!--Блок заголовка-->
 {% block title %}
     <title>{{title}}</title>
 {% endblock %}
 
-
+<!--Блок контента-->
 {% block content %}
 
+<!--Подключение базового шаблона альбома-->
 {% include 'articles/include/base_articles.html' %}
-
-
-
 
 {% endblock %}
