--- a/poyasnizagistu/blog/templates/blog/include/base.html
+++ b/poyasnizagistu/blog/templates/blog/include/base.html
@@ -1,74 +1,86 @@
+<!--БАЗОВЫЙ ШАБЛОН САЙТА-->
+<!--ПОДКЛЮЧЕНИЕ СТАТИЧЕСКИХ ФАЙЛОВ-->
 {% load static %}
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+
+    <!--БЛОК ЗАГОЛОВКА-->
     {% block title %}
     {% endblock title %}
-    <meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+<!--    ПОДКЛЮЧЕНИЕ BOOTSTRAP И СВЯЗАННЫХ БИБЛИОТЕК-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
-
-
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
+<!--    ПОДКЛЮЧЕНИЕ КАЛЕНДАРЯ DATETIMEPICKER-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.min.css" integrity="sha256-DOS9W6NR+NFe1fUhEE0PGKY/fubbUCnOfTje2JMDw3Y=" crossorigin="anonymous" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.full.min.js" integrity="sha256-FEqEelWI3WouFOo2VWP/uJfs1y8KJ++FLh2Lbqc8SJk=" crossorigin="anonymous"></script>
 
-
+<!--ПОДКЛЮЧЕНИЕ BAGUETTEBOX ДЛЯ ИЗОБРАЖЕНИЙ АЛЬБОМОВ-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.1/baguetteBox.min.css">
+
+<!--ПОДКЛЮЧЕНИЕ ФАЙЛА СО СТИЛЯМИ САЙТА-->
     <link rel="stylesheet" href='{% static "blog/css/styles.css" %}'>
 
+<!--ПОДКЛЮЧЕНИЕ favicon-->
     <link rel="apple-touch-icon" sizes="180x180" href="{% static 'blog/favicon/apple-touch-icon.png'%}">
     <link rel="icon" type="image/png" sizes="32x32" href="{% static 'blog/favicon/favicon-32x32.png'%}">
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'blog/favicon/favicon-16x16.png'%}">
     <link rel="manifest" href="{% static 'blog/favicon/site.webmanifest'%}">
 
 <body style="background-image: url('{% static 'blog/images/back.jpeg' %}'); ">
+
 <!--   ВВЕРХНЯЯ ПАНЕЛЬ МЕНЮ -->
 {% block navbar %}
     <nav class="navbar navbar-expand-md navbar-dark">
         <div class="container-fluid ">
             <a class="logo-container">
-             {% if request.user.is_authenticated %}
-             <img class="logo"  src='{{ user.avatar.url }}' alt="Avatar" width="60em" height="55em" >
-             <a href="{{ user.get_absolute_url }}"><button type="button" class="btn btn-outline-warning btn-sm btn-profile">Профиль</button></a>
-             <a href="{% url 'logout' %}"><button type="button" class="btn btn-outline-secondary btn-sm">Выход</button></a>
-             {% else %}
+            {% if request.user.is_authenticated %}
+            <img class="logo"  src='{{ user.avatar.url }}' alt="Avatar" width="60em" height="55em" >
+            <a href="{{ user.get_absolute_url }}"><button type="button" class="btn btn-outline-warning btn-sm btn-profile">Профиль</button></a>
+            <a href="{% url 'logout' %}"><button type="button" class="btn btn-outline-secondary btn-sm">Выход</button></a>
+            {% else %}
             <img class="logo"  src='{% static "blog/images/logo.jpg" %}' alt="PoyasniZaGistu" width="60em" height="55em" >
             </a>
             <a href="{% url 'login' %}"><button type="button" class="btn btn-outline-danger btn-sm">Вход</button></a>
             <a href="{% url 'register' %}"><button type="button" class="btn btn-outline-info btn-sm">Регистрация</button></a>
-             {% endif %}
+            {% endif %}
 		    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		        <span class="navbar-toggler-icon"></span>
 		    </button>
+<!--        ВКЛАДКИ МЕНЮ -->
 		    <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
                         <a class="nav-link"  href="{% url home.url_name %}"  {% if home.url_name in request.resolver_match.view_name %} style='color: red;' {% endif %}>{{home.title}}</a>
                     </li>
-{% for m in menu %}
+                    {% for m in menu %}
                     <li class="nav-item">
                         <a class="nav-link"  href="{% url m.url_name %}"  {% if m.url_name in request.path %} style='color: red;' {% endif %}>{{m.title}}</a>
                     </li>
-{% endfor %}
+                    {% endfor %}
 		        </ul>
             </div>
-
         </div>
 	</nav>
 {% endblock navbar %}
-      {% block content %}
-      {% endblock %}
-  <!-- ПОДВАЛ -->
+
+<!--БЛОК КОНТЕНТА-->
+{% block content %}
+{% endblock %}
+
+<!--ПОДВАЛ -->
     <footer class=" text-center text-white text-lg-start">
         <div class="text-footer">
-          © 2023-2030 Частичное или полное копирование информации с данного сайта для распространения на других ресурсах, в том числе и бумажных, строго запрещено.
+        © 2023-2030 Частичное или полное копирование информации с данного сайта для распространения на других ресурсах, в том числе и бумажных, строго запрещено.
         </div>
         <div class="footer">
             <div class="cont-right">Правообладатель контента: Оганян Э. Е.
