--- a/poyasnizagistu/users/templates/registration/profile_change.html
+++ b/poyasnizagistu/users/templates/registration/profile_change.html
@@ -1,4 +1,6 @@
+<!--Шаблон страницы изменения профиля-->
 {% extends 'blog/include/base.html' %}
+
 {% block title %}
     <title>Изменение профиля</title>
 {% endblock %}
@@ -19,6 +21,7 @@
     </form>
 </div>
 
+<!--Скрипт стилей календаря для ввода даты рождения-->
 <script>
   jQuery.datetimepicker.setLocale('ru');
   $(function () {
