--- a/poyasnizagistu/albums/templates/albums/list_organ_system.html
+++ b/poyasnizagistu/albums/templates/albums/list_organ_system.html
@@ -1,12 +1,16 @@
+<!--Шаблон пользовательского тега albums_tags (выпадающий список)-->
 
+<!--Базовый div-->
 <div class="text-center">
     <div class="btn-group">
-      <button disabled type="button" class="btn btn-dark">Системы органов</button>
-      <hr class="text-white">
-      <button type="button" class="btn btn-danger dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
-        <span class="visually-hidden"></span>
-      </button>
-      <ul class="dropdown-menu">
+        <button disabled type="button" class="btn btn-dark">Системы органов</button>
+        <hr class="text-white">
+        <button type="button" class="btn btn-danger dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+            <span class="visually-hidden"></span>
+        </button>
+        <ul class="dropdown-menu">
+
+<!--Если organ_selected передано False, добавляется класс css active кнопке "Все системы"-->
 {% if not organ_selected %}
             <button class="dropdown-item active" type="button">Все системы</button>
 {% else %}
@@ -14,14 +18,19 @@
 {% endif %}
 
 {% for o in organ %}
+<!--Если в системе органов более одного альбома, то выводим в раскрывающийся список-->
 {% if o.album__count > 0 %}
+
+<!--        Если slug системы органа равен organ_selected из view, то добавляется класс css active-->
             {% if o.slug == organ_selected %}
             <button class="dropdown-item active" type="button">{{o.name}}</button>
-             {% else %}
-            <a class="cat" href="{{ o.get_absolute_url }}"><button class="dropdown-item " type="button">{{o.name}}</button></a>
-          {% endif %}
+            {% else %}
+            <a class="cat" href="{{o.get_absolute_url}}">
+                <button class="dropdown-item " type="button">{{o.name}}</button>
+            </a>
+            {% endif %}
 {% endif %}
 {% endfor %}
-      </ul>
+        </ul>
     </div>
 </div>
