--- a/poyasnizagistu/articles/templates/articles/thematic.html
+++ b/poyasnizagistu/articles/templates/articles/thematic.html
@@ -1,13 +1,17 @@
+<!--Шаблон списка статей по тематикам-->
+
+<!--Подключение базового шаблона-->
 {% extends 'blog/include/base.html' %}
 
-
+<!--Блок заголовка-->
 {% block title %}
     <title>{{title}}</title>
 {% endblock %}
 
-
+<!--Блок контента-->
 {% block content %}
 
+<!--Подключение базового шаблона статей-->
 {% include 'articles/include/base_articles.html' %}
 
 {% endblock %}
