--- a/poyasnizagistu/blog/templates/blog/list_categories.html
+++ b/poyasnizagistu/blog/templates/blog/list_categories.html
@@ -1,12 +1,17 @@
+<!--Шаблон пользовательского тега blog_tags (выпадающий список)-->
 
+
+<!--Базовый div-->
 <div class="text-center">
     <div class="btn-group">
-      <button disabled type="button" class="btn btn-dark">Категории</button>
-      <hr class="text-white">
-      <button type="button" class="btn btn-danger dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
-        <span class="visually-hidden"></span>
-      </button>
-      <ul class="dropdown-menu">
+        <button disabled type="button" class="btn btn-dark">Категории</button>
+        <hr class="text-white">
+        <button type="button" class="btn btn-danger dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+            <span class="visually-hidden"></span>
+        </button>
+        <ul class="dropdown-menu">
+
+<!--Если cat_selected передано False, добавляется класс css active кнопке "Все категории"-->
 {% if not cat_selected %}
             <button class="dropdown-item active" type="button">Все категории</button>
 {% else %}
@@ -14,14 +19,20 @@
 {% endif %}
 
 {% for c in cats %}
+
+<!--Если в категориях более одного поста, то выводим в раскрывающийся список-->
 {% if c.post__count > 0 %}
+
+<!--        Если slug категории равен cat_selected из view, то добавляется класс css active-->
             {% if c.slug == cat_selected %}
             <button class="dropdown-item active" type="button">{{c.name}}</button>
-             {% else %}
-            <a class="cat" href="{{ c.get_absolute_url }}"><button class="dropdown-item " type="button">{{c.name}}</button></a>
-          {% endif %}
+            {% else %}
+            <a class="cat" href="{{c.get_absolute_url}}">
+                <button class="dropdown-item " type="button">{{c.name}}</button>
+            </a>
+            {% endif %}
 {% endif %}
 {% endfor %}
-      </ul>
+        </ul>
     </div>
 </div>
